Fix scrollbar.

--- a/src/app/public/public-song-list/public-song-list.component.css
+++ b/src/app/public/public-song-list/public-song-list.component.css
@@ -1,7 +1,6 @@
 
-
 .scrollable {
   overflow-y: scroll;
-  max-height: 1000px;
+  max-height: 75vh;
 }
 
