--- a/src/app/songs/song-list/song-list.component.css
+++ b/src/app/songs/song-list/song-list.component.css
@@ -5,5 +5,5 @@ app-song-item {
 
 .scrollable {
   overflow-y: scroll;
-  max-height: 600px;
+  max-height: 75vh;
 }
